rename description helper

--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <div class='organization-description clearfix'>
-      <p property="description"><%= highlight(organization_description(organization), @search) %></p>
+      <p property="description"><%= highlight(listing_summary(organization), @search) %></p>
       <%= link_to "#{editable?(organization.member) ? "Edit" : "More"} information".html_safe, organization.member, :class=>'btn pull-right', :title => "#{editable?(organization.member) ? "Edit" : "More"} information on #{organization.name}" %>
     </div>
   </div>
