rename summary partial

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <% @organizations.each do |organization| %>
-  <%= render :partial => 'organizations/summary', :locals => {:organization => organization}%>
+  <%= render :partial => 'listings/summary', :locals => {:organization => organization}%>
 <% end %>
 
 <%= render 'shared/alternate_formats' %>
