rename listing partial

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -4,7 +4,7 @@
 </ul>
 
 <div id="singleview">
-	<%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
+	<%= render :partial => 'listings/listing', :locals => {:organization => @organization}%>
 </div>
 
 <div style='clear:right'></div>
