--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -113,7 +113,7 @@
     <div class="control-group">
       <div class="controls">
         <section class='preview'>
-          <%= render :partial => 'organizations/organization', :locals => { :organization => @member.organization } %>
+          <%= render :partial => 'listings/listing', :locals => { :organization => @member.organization } %>
         </section>
       </div>
     </div>
