--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -106,14 +106,14 @@
       the details that are shown in the directory.
     </p>
 
-    <%= f.fields_for :organization do |builder| %>
+    <%= f.fields_for :listing do |builder| %>
       <%= render :partial => 'listings/form', :locals => { :f => builder } %>
     <% end %>
 
     <div class="control-group">
       <div class="controls">
         <section class='preview'>
-          <%= render :partial => 'listings/listing', :locals => { :organization => @member.organization } %>
+          <%= render :partial => 'listings/listing', :locals => { :organization => @member.listing } %>
         </section>
       </div>
     </div>
