get reset password token from vars, not resource
devise doesn’t store them in the DB any more, not in the same way.

--- a/app/views/devise_mailer/_confirmation.html.erb
+++ b/app/views/devise_mailer/_confirmation.html.erb
@@ -12,7 +12,7 @@
 
     <p style="font-family: Helvetica, Arial, sans-serif;">- Your membership number is <strong><%= @member.membership_number %></strong>.</p>
 
-    <p style="font-family: Helvetica, Arial, sans-serif;">- To activate your account click <%= link_to 'here', edit_password_url(@member, :reset_password_token => @member.reset_password_token) %> and enter your company profile for the Member Directory.</p>
+    <p style="font-family: Helvetica, Arial, sans-serif;">- To activate your account click <%= link_to 'here', edit_password_url(@member, :reset_password_token => @token) %> and enter your company profile for the Member Directory.</p>
 
     <% unless @type == "capsule" %>
       <p style="font-family: Helvetica, Arial, sans-serif;">- You will soon receive your Welcome Pack to help you get started with your ODI membership and make the most of ODI communications.</p>
