--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -87,7 +87,7 @@
     <div class="control-group">
       <div class="controls">
         <section class='preview'>
-          <%= render :partial => 'listings/listing', :locals => { :listing => @member.listing } %>
+          <%= render :partial => 'listings/listing', :locals => { :member => @member } %>
         </section>
       </div>
     </div>
