update edit forms

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -80,9 +80,7 @@
       the details that are shown in the directory.
     </p>
 
-    <%= f.fields_for :listing do |builder| %>
-      <%= render :partial => 'listings/form', :locals => { :f => builder } %>
-    <% end %>
+    <%= render :partial => 'listings/form', :locals => { :f => f } %>
 
     <div class="control-group">
       <div class="controls">
