--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,28 +1,28 @@
 <div class='row-fluid'>
 
   <div class='span6'>
-    <%= form_field f, :name do %>
-      <%= f.text_field :name, :class => 'input', :required => 'required',
-                       :'data-bind' => "value: name, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_name do %>
+      <%= f.text_field :organization_name, :class => 'input', :required => 'required',
+                       :'data-bind' => "value: organization_name, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :url do %>
-    	<%= f.url_field :url, :class => 'input', :placeholder => 'http://your-homepage.com',
-                      :'data-bind' => "value: url, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_url do %>
+    	<%= f.url_field :organization_url, :class => 'input', :placeholder => 'http://your-homepage.com',
+                      :'data-bind' => "value: organization_url, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :tagline do %>
-      <%= f.text_field :tagline, :class => 'input',
-                       :'data-bind' => "value: tagline, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_tagline do %>
+      <%= f.text_field :organization_tagline, :class => 'input',
+                       :'data-bind' => "value: organization_tagline, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :description do %>
-    	<%= f.text_area :description,
+    <%= form_field f, :organization_description do %>
+    	<%= f.text_area :organization_description,
                       :class => 'input',
                       :rows => '8',
                       :maxlength => @member.character_limit,
                       :required => 'required',
-                      :'data-bind' => "value: description, valueUpdate: 'afterkeydown'" %>
+                      :'data-bind' => "value: organization_description, valueUpdate: 'afterkeydown'" %>
     	<span class="help-block"><small>Plain text only, but you can use paragraphs</small></span>
     	<span class="help-block" id="limit"><%= "Limit of #{@member.character_limit} characters" %></span>
     	<script>
@@ -43,10 +43,10 @@
 
     <% unless @member.product_name == "supporter" %>
 
-      <%= form_field f, :logo do %>
-    		<%= f.file_field :logo, :accept => "image/*",
+      <%= form_field f, :organization_logo do %>
+    		<%= f.file_field :organization_logo, :accept => "image/*",
                          :'data-bind' => "event: {change: updateImage}" %>
-    		<%= f.hidden_field :logo_cache %>
+    		<%= f.hidden_field :organization_logo_cache %>
       <% end %>
 
     <% end %>
@@ -55,36 +55,36 @@
 
   <div class='span6'>
 
-    <%= form_field f, :contact_name do %>
-      <%= f.text_field :contact_name, :class => 'input-large',
-                       :'data-bind' => "value: contactName, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_contact_name do %>
+      <%= f.text_field :organization_contact_name, :class => 'input-large',
+                       :'data-bind' => "value: organization_contactName, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :contact_phone do %>
-      <%= f.text_field :contact_phone, :class => 'input-large', :type => 'tel',
-                       :'data-bind' => "value: contactPhone, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_contact_phone do %>
+      <%= f.text_field :organization_contact_phone, :class => 'input-large', :type => 'tel',
+                       :'data-bind' => "value: organization_contactPhone, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :contact_email do %>
-      <%= f.email_field :contact_email, :class => 'input-large',
-                       :'data-bind' => "value: contactEmail, valueUpdate: 'afterkeydown'",
+    <%= form_field f, :organization_contact_email do %>
+      <%= f.email_field :organization_contact_email, :class => 'input-large',
+                       :'data-bind' => "value: organization_contactEmail, valueUpdate: 'afterkeydown'",
                        :pattern => "[a-zA-Z0-9._%+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z.]+",
                        :title => "Please enter a valid email address" %>
     <% end %>
 
-    <%= form_field f, :twitter do %>
-      <%= f.text_field :twitter, :class => 'input-large', :placeholder => '@username',
-                       :'data-bind' => "value: twitter, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_twitter do %>
+      <%= f.text_field :organization_twitter, :class => 'input-large', :placeholder => '@username',
+                       :'data-bind' => "value: organization_twitter, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :facebook do %>
-    	<%= f.url_field :facebook, :class => 'input-large', :placeholder => 'http://facebook.com/pages/your-page',
-                      :'data-bind' => "value: facebook, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_facebook do %>
+    	<%= f.url_field :organization_facebook, :class => 'input-large', :placeholder => 'http://facebook.com/pages/your-page',
+                      :'data-bind' => "value: organization_facebook, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
-    <%= form_field f, :linkedin do %>
-    	<%= f.url_field :linkedin, :class => 'input-large', :placeholder => 'http://linkedin.com/company/your-org',
-                      :'data-bind' => "value: linkedin, valueUpdate: 'afterkeydown'" %>
+    <%= form_field f, :organization_linkedin do %>
+    	<%= f.url_field :organization_linkedin, :class => 'input-large', :placeholder => 'http://linkedin.com/company/your-org',
+                      :'data-bind' => "value: organization_linkedin, valueUpdate: 'afterkeydown'" %>
     <% end %>
   </div>
 
